# Luxtick

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  DEVELOPER_GUIDE.md  Dockerfile  README.md  SPECS.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  not-yet-deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: init-readonly-user.sql  init-test-db.sql  reprocess_products.py
src/: __main__.py  config.py  main.py
src/agent/: core.py  prompts.py  receipt_parser.py  tool_executor.py  tools.py
src/bot/: router.py
src/db/: models.py  session.py
src/services/: analytics.py  category_taxonomy.py  discount.py  product.py  product_intelligence.py  purchase.py  shopping_list.py  text_to_sql.py
tests/: conftest.py  factories.py
tests/agent/: test_agent_core.py  test_receipt_parser.py  test_tool_executor.py
tests/bot/: test_callback_handler.py  test_message_handler.py  test_photo_handler.py  test_start_handler.py
tests/db/: test_migrations.py  test_model_constraints.py  test_model_relationships.py
tests/integration/: test_discount_flow.py  test_full_photo_flow.py  test_full_text_flow.py  test_manual_purchase_flow.py  test_multi_turn_conversation.py  test_shopping_list_lifecycle.py
tests/services/: test_analytics_service.py  test_discount_service.py  test_product_matcher.py  test_purchase_service.py  test_shopping_list_service.py  test_text_to_sql.py
tests/unit/: test_auth_middleware.py  test_config.py  test_prompts.py  test_pure_functions.py  test_pydantic_schemas.py  (+3 more)
(+6 files in other folders)
