[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxtick"
version = "1.0.0"
description = "Intelligent Telegram bot for managing purchases, receipts, and shopping lists"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.25",
    "litellm~=1.81",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.31",
    "alembic~=1.18",
    "pydantic~=2.12",
    "pydantic-settings~=2.12",
    "pillow~=12.1",
    "rapidfuzz~=3.14",
    "aiohttp~=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "ruff~=0.15",
    "mypy~=1.19",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests with no external dependencies",
    "service: Service-layer tests requiring PostgreSQL",
    "agent: Agent tests with mocked LLM",
    "bot: Bot handler tests with mocked bot",
    "integration: End-to-end integration tests",
    "db: Database model and migration tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
